--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
-  "name": "알리익스프레스 달러 원화 변환",
-  "version": "1.2",
-  "description": "AliExpress 통화 변환 확장 프로그램",
+  "name": "알리익스프레스 달러 원화 변환 | AliExpress USD <-> KRW Converter",
+  "version": "1.3",
+  "description": "AliExpress 통화 변환 확장 프로그램 | AliExpress USD <-> KRW Converter",
   "icons": {
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
